kubernetes/apps/default/qbittorrent/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: qbittorrent
subsets:
  - addresses:
      - ip: 10.13.17.48
    ports:
      - port: 8080
