kubernetes/apps/default/qbittorrent/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - qbittorrent.dovis.me
    - qbt.dovis.me
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
